<resources>
    <string name="app_name">Trivia</string>

    <string name="filter_btn_start">Start Quiz</string>

    <string name="filter_difficulty_all">All</string>
    <string name="filter_difficulty_easy">Easy</string>
    <string name="filter_difficulty_medium">Medium</string>
    <string name="filter_difficulty_hard">Hard</string>

    <string name="filter_api_error">Error please try again.</string>
    <string name="filter_retry">Retry</string>
    <string name="filter_no_more">No More Questions</string>

    <string name="filter_category_all">All</string>

    <plurals name="quiz_progress">
        <item quantity="one">Question: %1$d / %2$d</item>
        <item quantity="other">Questions: %1$d / %2$d</item>
    </plurals>

    <string name="questions_back_dialog_title">Exit Quiz</string>
    <string name="questions_back_dialog_message">Do you want to exit this quiz?</string>
    <string name="questions_back_btn_positive">Exit</string>
    <string name="questions_back_btn_negative">Back To Quiz</string>

    <string name="filter_number">Number of Questions</string>
    <string name="filter_difficulty">Difficulty</string>
    <string name="filter_category">Category</string>

    <string name="result_btn_done">Done</string>
    <string name="result_title">Result: %1$s / %2$s</string>
    <string name="result_correct">Correct</string>
    <string name="result_incorrect">Incorrect</string>

    <string name="home_menu_title_play">Play</string>
    <string name="home_menu_title_filter">Filter</string>
    <string name="home_menu_title_history">History</string>

    <string name="history_result">%1$d/%2$d</string>
    <string name="history_empty">No Quiz History\nTake a Quiz to get Started</string>
    <string name="history_error">Error loading History</string>
    <string name="history_error_action">Retry</string>

</resources>
