<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_play"
        android:enabled="true"
        android:icon="@drawable/ic_menu_play"
        android:title="@string/home_menu_title_play"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_menu_history"
        android:title="@string/home_menu_title_history"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:enabled="true"
        android:icon="@drawable/ic_menu_filter"
        android:title="@string/home_menu_title_filter"
        app:showAsAction="always" />
</menu>