<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                style="@style/FilterItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_number"
                    android:textAppearance="@style/Text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/filter_padding_vert">

                    <SeekBar
                        android:id="@+id/filterCountSeekBar"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:max="49"
                        tools:progress="9" />

                    <EditText
                        android:id="@+id/filterCountEt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:digits="0123456789"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="numberSigned"
                        android:maxEms="2"
                        android:maxLength="2"
                        android:minEms="2"
                        tools:text="10" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_difficulty"
                    android:textAppearance="@style/Text" />

                <Spinner
                    android:id="@+id/filterDifficultySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_category"
                    android:textAppearance="@style/Text" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        tools:listitem="@layout/category_item"
        android:id="@+id/filterCategoriesRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/recycler_button_bottom_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <FrameLayout
        style="@style/FilterItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/filterBtnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_btn_start" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/filterLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>


